<resources>
    <string name="reciver">myjin.pro.ahoora.myjin.play</string>
    <string name="reciver2">myjin.pro.ahoora.myjin.play2</string>
    <string name="app_name">ژین من</string>
    <string name="title_activity_maps">Map</string>
    <string name="ic_doctor_m">http://myjin.ir/photos/ic_doctor_m.png</string>
    <string name="ic_doctor_f">http://myjin.ir/photos/ic_doctor_f.png</string>
    <string name="dnj">دریافت نسخه جدید</string>
    <string name="hbnjbrvsh">به دلیل تغییرات ساختاری، لازم است نسخه جدید را حتما دانلود کنید. </string>
    <string name="addarabdk">اگر تمایل دارید آن را دریافت کنید .</string>
    <string name="continue_"> ادامه</string>
    <string name="app_intro_skip">Skip</string>
    <string name="mnvfs">مرکز نوآوری و فناوری سلامت</string>
    <string name="noDetail">به دلیل اتمام زمان قرارداد، این بخش فعلا قابل مشاهده نیست . البته واحد پشتیبانی ما این مورد را پیگیری خواهد کرد.</string>
    <string name="version">نسخه 1.0.7 \n 1397 / 9 / 5</string>
    <string name="lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="myJin">ژین من</string>
    <string name="backupContext"> \nدر صورت نصب مجدد ژین من میتوانید اطلاعات قبلی خود را بازیابی کنید</string>
    <string name="backupTitle">پشتیبان گیری با موفقیت انجام شد</string>
    <string name="backup">پشتیبان گیری</string>
    <string name="restoreTitle">بازگردانی</string>
    <string name="restoreContext">با موفقیت انجام شد</string>
    <string name="zero_center_count">0 مرکز</string>
    <string name="nothingMarkedYet">هیچ موردی تا کنون نشان نشده است !</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="checkYourConnection">به اینترنت متصل نیستید، لطفا بررسی کنید</string>
    <string name="fav">نشان شده ها</string>
    <string name="doYouConnected">به اینترنت متصل نیستید ؟ می توانید نشان شده ها را ببیند در غیر این صورت دوباره تلاش کنید!</string>
    <string name="introductionFlag">introFlag</string>
    <string name="introductionFlag2">introFlag2</string>
    <string name="defTab">defTab</string>
    <string name="provId">provId</string>
    <string name="cityId">cityId</string>
    <string name="healthCenters">مراکز</string>
    <string name="etlaeieh">آموزش</string>
    <string name="filmoanimation">فیلم و انیمیشن</string>
    <string name="pishnahadvizheh">پیشنهاد</string>
    <string name="abzarmofid">امکانات</string>
    <string name="moshaverhoporsesh">پرس جو</string>
    <string name="provCityPair">provCityPair</string>
    <string name="permission">اجازه دستیابی به حافظه خارجی را صادر کرده و دوباره سعی کنید</string>
    <string name="skip">ورود</string>
    <string name="exieMsg">خارج میشوید ؟</string>
    <string name="baleh">بله</string>
    <string name="no">نه</string>
    <string name="checkConnectionAndTryAgain">از اتصال دستگاه به اینترنت مطمئن شوید سپس دوباره تلاش کنید</string>
    <string name="exit">خروج</string>
    <string name="msgBackup">پشتیبان گیری موفقیت آمیز بود</string>
    <string name="msgRestore">بازگردانی موفقیت آمیز بود</string>
    <string name="msgNotRestore">بازگردانی نشد</string>
    <string name="clean">پاک کردن</string>
    <string name="messagesClean">messagesClean</string>
    <string name="centersClean">centersClean</string>
    <string-array name="cityArray">
        <item>سنندج</item>
        <item>سقز</item>
        <item>قروه</item>
        <item>مریوان</item>
        <item>بانه</item>
        <item>کامیاران</item>
        <item>بیجار</item>
        <item>دیواندره</item>
        <item>دهگلان</item>
        <item>سروآباد</item>
    </string-array>
    <string-array name="provArray">
        <item> آذربایجان شرقی</item>
        <item> آذربایجان غربی</item>
        <item>اردبیل</item>
        <item> اصفهان</item>
        <item>البرز</item>
        <item>ایلام</item>
        <item>بوشهر</item>
        <item>تهران</item>
        <item>چهار محال و بختیاری</item>
        <item>خراسان جنوبی</item>
        <item>خراسان رضوی</item>
        <item>خراسان شمالی</item>
        <item>خوزستان</item>
        <item>زنجان</item>
        <item>سمنان</item>
        <item>سیستان و بلوچستان</item>
        <item>فارس</item>
        <item>قزوین</item>
        <item>قم</item>
        <item>کردستان</item>
        <item>کرمان</item>
        <item>کرمانشاه</item>
        <item>کهگیلویه و بویر احمد</item>
        <item>گلستان</item>
        <item>گیلان</item>
        <item>لرستان</item>
        <item>مازندران</item>
        <item>مرکزی</item>
        <item>هرمزگان</item>
        <item>همدان</item>
        <item>یزد</item>

    </string-array>
    <string name="passowrd">رمز عبور</string>
    <string name="show_pwd">نمایش رمز عبور</string>
    <string name="hide_pwd">عدم نمایش رمز</string>
    <string name="forgot">رمز عبور را فراموش کرده اید؟</string>
    <string name="confirmPassword">تایید رمز عبور</string>
    <string name="already_user">از قبل حساب دارید؟ از اینجا وارد شوید.</string>
    <string name="registered_emailid">لطفا ایمیل ثبت شده را وارد کنید :</string>
    <string name="send">ارسال</string>
    <string name="ktrvk">کد تایید را وارد کنید</string>
    <string name="vshhvsh">ویرایش شماره همراه وارد شده</string>
    <string name="cotekh">ما یک کد تایید را برای شما ارسال خواهیم کرد\nآن را در محل مربوطه وارد کنید</string>
    <string name="lshhkhrtevk">لطفا شماره همراه خود را طبق الگو وارد کرده دکمه ادامه را بزنید و منتظر کد تایید بمانید.</string>
    <string name="default_notification_channel_id">MyJin</string>
    <string name="early">این امکان به زودی در نسخه جدید اضافه می شود</string>
    <string name="gmdepakmbzemrbkhkmnshrb">گویا مشکلی در ارتباط پیش آمده،کارشناسان ما به زودی این مورد را بررسی خواهند کرد. می توانید نشان شده ها را ببینید</string>
    <string name="gmdepakmbzemrbkhk">گویا مشکلی در ارتباط پیش آمده،کارشناسان ما به زودی این مورد را بررسی خواهند کرد!</string>
    <string name="khj">خدمات ژین</string>
    <string name="nemayesh">نمایش</string>
    <string name="ett">اطلاعات تماس</string>
    <string name="email">ایمیل</string>
    <string name="website">وبسایت</string>
    <string name="rnnb">روی نقشه نشان بده</string>
    <string name="notification">اعلان ها</string>
    <string name="bjemlm">به محض جستجو اطلاعات مراکز لیست می شود</string>
    <string name="pdjdhtshea">پایگاه داده ژین در حال تکمیل شدن اطلاعات است …</string>
    <string name="tha_n">به ترتیب حروف الفبا - نزولی</string>
    <string name="tha_s">به ترتیب حروف الفبا - صعودی</string>
    <string name="bhtghd">بیمه های طرف قرارداد</string>
    <string name="khadamat">خدمات</string>
    <string name="moarefi">معرفی</string>
    <string name="rozhayekari">روز و ساعت کار</string>
    <string name="telephone">تلفن</string>
    <string name="address">آدرس</string>
    <string name="motakhases">متخصص</string>
    <string name="name">نام</string>
    <string name="tamasbama">تماس با ما</string>
    <string name="aboutour">درباره ما</string>
    <string name="nshanshodehha">نشان شده ها</string>
    <string name="khnp">خدمات نوین پستی</string>
    <string name="khdict">خدمات دفاتر ICT</string>
    <string name="khste">خدمات سازمان تامین اجتماعی</string>
    <string name="khbs">خدمات بیمه سلامت</string>
    <string name="khdop">خدمات دانشکاه علوم پزشکی</string>
    <string name="vrodvozviat">ورود / عضویت</string>
    <string name="khrda">خطایی رخ داده است</string>
    <string name="ltmkhshesh">لطفا تمامی موارد خواسته شده ارسال شود</string>
    <string name="vbkhmsh">ورود با خطا مواجه شد</string>
    <string name="family">نام خانوادگی</string>
    <string name="tmpsh">تمامی موارد پر شود</string>
    <string name="shhkhrvk">شماره همراه خود را وارد کنید</string>
    <string name="shhen">شماره همراه اعتبار ندارد</string>
    <string name="shhtovsh">شماره همراه طبق الگو وارد شود</string>
    <string name="lyervk">لطفا یک عبارت را وارد کنید ,</string>
    <string name="tfknmshdmndbezm">توجه فرمایید که نقطه مشخص شده در مرکز نقشه در بانک اطلاعاتی این مرکز ذخیره می شود</string>
    <string name="mhebdeh">متوجه هستم، ادامه بده</string>
    <string name="bdemssh">با موفقیت در اطلاعات مرکز ذخیره شد</string>
    <string name="khdzke">خطا در ذخیره کردن اطلاعات</string>
    <string name="enbgard">ادامه نده، برگرد</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nemikham">نمیخوام</string>
    <string name="jmdssh">ژین من در سایر شهرها</string>
    <string name="ebdhhtokpm">این برنامه در حال حاضر تنها استان کردستان را پوشش می دهد ..</string>
    <string name="mmnrek">گروه مورد نظر را انتخاب کنید</string>
    <string name="dbmnrek">زیرگروه مورد نظر را انتخاب کنید</string>
    <string name="virayshnam">ویرایش نام</string>
    <string name="logout">خروج از حساب</string>
    <string name="shomarehtelephone">شماره تلفن</string>
    <string name="takhsosha">تخصص ها</string>
    <string name="takhasos">تخصص</string>
    <string name="nmnkhb">نام مرکز نباید خالی باشد</string>
    <string name="cvshea">کد وارد شده اشتباه است</string>
    <string name="tamasonline">ارتباط برخط با پشتیبانی</string>
    <string name="shareMyJin">اشتراک گذاری</string>
    <string name="appbrnk">اپلیکیشن بازار را نصب کنید</string>
    <string name="phdzhm">پیام های داخلی ژین من</string>
    <string name="close">بستن</string>
    <string name="emtiazdadan">امتیاز دادن</string>
    <string name="qavaninomoqarrat">قوانین و مقررات</string>
    <string name="setting">تنظیمات</string>
    <string name="jstjokonid">جستجو کنید</string>
    <string name="miejmrakbdk">می بایستی ابتدا (ژین من) را مستقیم از کافه بازار دریافت کنید</string>
    <string name="bmi">شاخص توده بدنی  BMI چیست؟\nیکی از شاخص هایی است که هر شخص می تواند با محاسبه آن بداند که در چه محدوده وزنی قرار دارد البته بر کسی پوشیده نیست که هر شخص با توجه به سن، جنس، میزان فعالیت، اندازه جثه و عوامل دیگر می بایست دارای وزن ایده آل خود باشد، اما از آنجا که محاسبه وزن ایده آل نیاز به محاسبه دقیق و تخصصی دارد، لذا از بی ام آی بعنوان شاخص عمومی برای افراد بالای ۱۹ سال استفاده می شود \nروش محاسبه  BMI \nعبارت است از وزن به کیلوگرم تقسیم بر مجذور قد به متر. به عنوان مثال شخصی با وزن ۷۸ کیلوگرم و قد ۱۷۰ سانتی متر دارای بی ام آی معادل ۲۶.۹ خواهد داشت\n(وزن بر حسب کیلوگرم) تقسیم بر (قد بر حسب متر به توان ۲)</string>
    <string name="crisp1">اگر درباره هریک از خدمات و سرویس‌ها پرسشی دارید که می‌خواهید در زودترین هنگام به آن پاسخ داده شود، گفت‌وگوی آنلاین با متخصصین از ساده‌ترین  راه‌ها برای این منظور است.</string>
    <string name="crisp2">اگر در هنگام گفت‌وگو کارشناسان ژین در همان لحظه آنلاین نباشند، پرسش شما به محض آنلاین شدن وضعیت کارشناس و در زودترین هنگام پاسخ داده خواهد شد.</string>
    <string name="crisp3">راه‌های دیگر برای تماس با گروه ژین وجود دارد که در صفحه “ارتباط با ژین” می‌توانید مشاهده کنید.</string>
</resources>