<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/back1"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginTop="50dp"
        android:id="@+id/et_fn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/samim"
        android:gravity="center|start"
        android:hint="@string/name"
        android:maxLines="1"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_fn"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/samim"
        android:gravity="center|start"
        android:hint="@string/family"
        android:maxLines="1"
        android:textSize="18sp" />
    <RelativeLayout

        android:visibility="gone"
        android:id="@+id/rl_hbf"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:src="@drawable/ic_jin_pro" />

        <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/cpv_hbf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            app:cpv_animAutostart="true"
            app:cpv_color="@color/green"
            app:cpv_indeterminate="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/back">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_continue"
            tools:targetApi="m"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_next"
            android:drawableTint="@color/green"
            android:fontFamily="@font/samim"
            android:gravity="center|end"
            android:inputType="number"
            android:paddingEnd="16dp"
            android:text="@string/continue_"
            android:textColor="@color/green"
            android:textDirection="rtl"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


    </RelativeLayout>
</RelativeLayout>
