<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back1"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_filter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/green">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="17dp"
            android:text="ویرایش نام"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:fontFamily="@font/samim" />

    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_fn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_fn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/samim"
            android:gravity="center|start"
            android:hint="@string/name"
            android:maxLines="1"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/il_fn"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_ln"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/samim"
            android:gravity="center|start"
            android:hint="@string/family"
            android:maxLines="1"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout

        android:id="@+id/rl_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="5dp"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.button.MaterialButton

            android:id="@+id/tv_continue"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:backgroundTint="@color/green"
            app:fontFamily="@font/samim" />


    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
