<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_netErrLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_neterror"
            app:layout_constraintBottom_toTopOf="@+id/tv_splashContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/colorAccent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_splashContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/doYouConnected"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:fontFamily="@font/yekan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_splashFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/fav"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tv_splashContent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_splashTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/tryAgain"
            app:backgroundTint="@color/white"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tv_splashContent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="180dp" />


    </android.support.constraint.ConstraintLayout>

    <com.github.rahatarmanahmed.cpv.CircularProgressView
        android:id="@+id/cpv_splash"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:cpv_animAutostart="true"
        app:cpv_indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>