<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="30dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_alias"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edittext_states"
                    android:fontFamily="@font/yekan"
                    android:hint="اسم مستعار"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/userEmailId"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/title"
                    android:textColorHint="@color/c1"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/userEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edittext_states"
                    android:fontFamily="@font/yekan"
                    android:hint="ایمیل"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/et_pass"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/title"
                    android:textColorHint="@color/c1"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edittext_states"
                    android:fontFamily="@font/yekan"
                    android:gravity="end|center"
                    android:hint="@string/passowrd"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/et_confirmPassword"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/title"
                    android:textColorHint="@color/c1" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edittext_states"
                    android:fontFamily="@font/yekan"
                    android:gravity="end|center"
                    android:hint="@string/confirmPassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/title"
                    android:textColorHint="@color/c1" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_tag"
                    android:fontFamily="@font/yekan"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:text="ثبت نام"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/already_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:fontFamily="@font/yekan"
                    android:text="@string/already_user"
                    android:textColor="@color/title"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>


</RelativeLayout>


